Re-fix the h1 on iPhone 6

--- a/css/main.css
+++ b/css/main.css
@@ -374,7 +374,7 @@ h3 {
 
 @media screen and (max-width: 640px) {
   h1 {
-    font-size: 2.1rem; }
+    font-size: 2.0rem; }
 
   h2 {
     font-size: 1.7rem; }
